fix spacing, line-height, width and type

--- a/text/_type/text_type_h1.post.css
+++ b/text/_type/text_type_h1.post.css
@@ -1,3 +1,3 @@
 .text_type_h1 {
-	margin: 15px 0 21px;
+  margin: 2em 0 1em;
 }
